--- a/Beadando/app/src/main/res/layout/activity_login_screen.xml
+++ b/Beadando/app/src/main/res/layout/activity_login_screen.xml
@@ -13,11 +13,12 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="80dp"
-        android:backgroundTint="#CCCCCC"
+        android:backgroundTint="@color/text_color"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColorHint="#888888"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,27 +30,27 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/aclonica"
         android:gravity="center_horizontal"
-        android:text="SpiralChat"
-        android:textColor="#CCCCCC"
+        android:text="@string/title"
+        android:textColor="@color/text_color"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_logo"
-        app:layout_constraintVertical_bias="0.041" />
+        app:layout_constraintVertical_bias="0.050000012" />
 
     <Button
         android:id="@+id/login_register_button"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:background="#00000000"
         android:backgroundTint="#00E41111"
+        android:gravity="center_vertical"
         android:onClick="onClickRegister"
-        android:text="Register"
+        android:text="@string/register"
         android:textAllCaps="false"
-        android:textColor="#CCCCCC"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +63,7 @@
         android:layout_marginTop="60dp"
         android:backgroundTint="#823BBD"
         android:onClick="onClickLogin"
-        android:text="Login"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_show_password" />
@@ -72,12 +73,12 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#CCCCCC"
+        android:backgroundTint="@color/text_color"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:textColor="#CCCCCC"
-        android:textColorHint="#888888"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,8 +90,8 @@
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
-        android:text="Show Password"
-        android:textColor="#cccccc"
+        android:text="@string/sh_password"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_password" />
@@ -99,12 +100,12 @@
         android:id="@+id/login_logo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo"
-        app:tint="#CCCCCC" />
+        app:tint="@color/text_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
