--- a/Beadando/app/src/main/res/layout/activity_register_screen.xml
+++ b/Beadando/app/src/main/res/layout/activity_register_screen.xml
@@ -12,24 +12,40 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="40dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo"
-        app:tint="#CCCCCC" />
+        app:tint="@color/text_color" />
+
+    <TextView
+        android:id="@+id/logo_title3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/aclonica"
+        android:gravity="center_horizontal"
+        android:text="@string/title"
+        android:textColor="@color/text_color"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_logo"
+        app:layout_constraintVertical_bias="0.050000012" />
 
     <EditText
         android:id="@+id/reg_nickname"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#CCCCCC"
+        android:backgroundTint="@color/text_color"
         android:ems="10"
-        android:hint="Nickname"
+        android:hint="@string/nickname"
         android:inputType="textPersonName"
-        android:textColor="#CCCCCC"
-        android:textColorHint="#888888"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,12 +56,12 @@
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#CCCCCC"
+        android:backgroundTint="@color/text_color"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:textColor="#CCCCCC"
-        android:textColorHint="#888888"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +75,7 @@
         android:layout_marginTop="50dp"
         android:backgroundTint="#823BBD"
         android:onClick="onClickRegister"
-        android:text="Register"
+        android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,15 +83,15 @@
 
     <Button
         android:id="@+id/reg_login_button"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:background="#00000000"
         android:backgroundTint="#00E41111"
         android:onClick="onClickLogin"
-        android:text="Login"
+        android:text="@string/login"
         android:textAllCaps="false"
-        android:textColor="#CCCCCC"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,10 +102,9 @@
         android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginTop="4dp"
-        android:text="Show Password"
-        android:textColor="#cccccc"
+        android:text="@string/sh_password"
+        android:textColor="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_password" />
 
@@ -97,15 +112,16 @@
         android:id="@+id/reg_email"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="60dp"
-        android:backgroundTint="#CCCCCC"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/text_color"
         android:ems="10"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:textColorHint="#888888"
+        android:textColor="@color/text_color"
+        android:textColorHint="@color/hint_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/logo_title3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
