--- a/Beadando/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Beadando/app/src/main/res/layout/activity_splash_screen.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/aclonica"
         android:gravity="center_horizontal"
-        android:text="SpiralChat"
-        android:textColor="#CCCCCC"
+        android:text="@string/title"
+        android:textColor="@color/text_color"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +27,7 @@
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:contentDescription="@string/logo"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +36,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.567"
         app:srcCompat="@drawable/logo"
-        app:tint="#CCCCCC" />
+        app:tint="@color/text_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
